# rust_wasm_dodrio_router

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: rust.yml
docs/: aliases.js  index.html  search-index.js  settings.html  source-files.js
docs/rust_wasm_dodrio_router/: all.html  index.html  sidebar-items.js
docs/rust_wasm_dodrio_router/router_mod/: fn.get_url_param_in_hash_after_dot.html  fn.private_get_url_param_in_hash_after_dot.html  index.html  sidebar-items.js  trait.RouterTrait.html
docs/rust_wasm_dodrio_router/routermod/: trait.RouterTrait.html
docs/rust_wasm_router/: index.html
docs/rust_wasm_router/routermod/: index.html  sidebar-items.js
docs/src/rust_wasm_dodrio_router/: lib.rs.html  router_mod.rs.html
docs/src/rust_wasm_router/: lib.rs.html  routermod.rs.html
src/: lib.rs  router_mod.rs  routermod.rs
