[package]
name = "rust_wasm_dodrio_router"
version = "0.5.2"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2018"
description = "wasm router for local hash routes for dodrio vdom"
repository = "https://github.com/bestia-dev/rust_wasm_dodrio_router"
readme = "README.md"
license = "MIT"
keywords = ["wasm","router","hash"]
categories = ["wasm","web-programming"]
# publish as a crates.io library. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*",
]

[dependencies]
# my dependencies from crates.io
rust_wasm_websys_utils = "0.4.3"

# other dependencies
unwrap = "1.2.1"
dodrio = "0.2.0" 
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
getrandom = { version = "0.2.1", features = ["js"]}
rand = { version = "0.8.2", features = ["small_rng"] }
js-sys = "0.3"
serde = "1.0.107"
serde_json = "1.0"
wasm-bindgen-futures = "0.4.19"

[dependencies.web-sys]
version = "0.3.46"
features = [
  "console",
  "Document",
  "Element",
  "ErrorEvent",
  "Event",
  "EventListener",
  "EventTarget",
  "History",
  "HtmlAudioElement",
  "HtmlElement",
  "HtmlImageElement",
  "HtmlInputElement",
  "HtmlMediaElement",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Navigator",
  "Node",
  "Request",
  "RequestCache",
  "RequestCredentials",
  "RequestInit",
  "RequestMode",
  "RequestRedirect",
  "Response",
  "Storage",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.19"